--- a/Junior/blogr-landing-page-main/sass/components/_features.scss
+++ b/Junior/blogr-landing-page-main/sass/components/_features.scss
@@ -1,7 +1,7 @@
 .features {
    padding: 10rem 2.5rem;
    position: relative;
-   overflow-x: hidden;
+   overflow: hidden;
 
    @include media(medium) {
       padding: 16rem 0 25rem;
